syntax = "proto3";

package go.micro.service.spotify;

service Spotify {
	rpc RootRedirect(RedirectRequest) returns (RedirectResponse) {}
	rpc Callback(CallbackRequest) returns (CallbackResponse) {}
	rpc Save(SaveRequest) returns (SaveResponse) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message RedirectRequest {
}

message RedirectResponse {
}

message CallbackRequest {
	string error = 1;
	string code = 2;
	string state = 3;

}

message CallbackResponse {

}

message SaveRequest {
	string user_name = 1;
}

message SaveResponse {

}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
